2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Added line dirty/changed
	markers.

2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: fixed 'Bug 469928 -
	Text editor in assembly browser hung randomly'.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.mdp: treat warnings as errors.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* SyntaxModes/XmlSyntaxMode.xml: fixed "Bug 469628 - XML attribute
	highlighting broken"

2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Remove debug code.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* Mono.TextEditor.mdp: Flush project format changes.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Reduced memory
	consumption of syntax highlighting parser.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/Chunk.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Reduced memory
	footprint. Chunks are now represented as a primitve list instead of
	creating a collection object for each chunk request.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: set clip region.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/XmlSyntaxMode.xml:
	* SyntaxModes/JavaSyntaxMode.xml:
	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/CSharpSyntaxMode.xml: