@@ -1,2 +1,20 @@
 <objects attr-sync="on">
+  <object type="Mono.TextEditor.TextEditor" palette-category="Mono.TextEditor" allow-children="false" base-type="Gtk.DrawingArea">
+    <itemgroups>
+      <itemgroup label="TextEditor Properties">
+        <property name="SelectionAnchor" />
+        <property name="SelectedText" />
+        <property name="SearchPattern" />
+        <property name="HighlightSearchPattern" />
+        <property name="IsCaseSensitive" />
+        <property name="IsWholeWordOnly" />
+      </itemgroup>
+    </itemgroups>
+    <signals>
+      <itemgroup label="TextEditor Signals">
+        <signal name="SelectionChanged" />
+        <signal name="LinkRequest" />
+      </itemgroup>
+    </signals>
+  </object>
 </objects>
